# resume-generator

./: .env.example  .gitignore  CLAUDE.md  README.md  profile.example.json  pyproject.toml
experiences/: professional.example.md  projects.example.md
scripts/: app.py  ats_score.py  generate_resume.py  llm.py  read_experiences.py  resume_template.tex  tex_stats.py  ui_common.py  validate_resume_content.py
scripts/pages/: 0_Setup.py  1_Generate.py  2_Refine.py
